fix: 修复了部分不完善的地方例如:server层的缺失

--- a/src/index/login/login.css
+++ b/src/index/login/login.css
@@ -13,6 +13,15 @@ body,
     width: 100%;
     height: 100%;
     position: relative;
+    background: #41454e;
+}
+
+.photosynthesis{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -310px;
+    margin-top: -170px;
 }
 
 .login-box {
