--- a/src/index/global.less
+++ b/src/index/global.less
@@ -1,8 +1,15 @@
 /*
  * @Author: liuzhongbao 
  * @Date: 2019-10-26 10:08:14 
- * @Last Modified by:   liuzhongbao 
- * @Last Modified time: 2019-10-26 10:08:14 
+ * @Last Modified by: liuzhongbao
+ * @Last Modified time: 2019-11-02 17:36:24
  */
 
 //全局less引入
+// .button{
+//     :global{
+//         .ant-btn .ant-btn-primary{
+//             background-color: red;
+//         }
+//     }
+// }
